--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,10 +16,22 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - name: Install browsers dependencies
+    - run: sudo apt-get install libvpx7\  
+            libevent-2.1-7\  
+            libopus0\        
+            libwoff1\        
+            libharfbuzz-icu0\
+            libgstreamer-plugins-base1.0-0\    
+            libgstreamer-gl1.0-0\     
+            libhyphen0\      
+            libmanette-0.2-0\
+            libgles2\        
+            gstreamer1.0-libav 
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
