--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - name: Install browsers dependencies
-    - run: sudo apt-get install libvpx7\  
+      run: sudo apt-get install libvpx7\  
             libevent-2.1-7\  
             libopus0\        
             libwoff1\        
