--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,17 +21,7 @@ jobs:
 
     steps:
     - name: Install browsers dependencies
-      run: sudo apt-get update &&  sudo apt-get install libvpx7\  
-            libevent-2.1-7\  
-            libopus0\        
-            libwoff1\        
-            libharfbuzz-icu0\
-            libgstreamer-plugins-base1.0-0\    
-            libgstreamer-gl1.0-0\     
-            libhyphen0\      
-            libmanette-0.2-0\
-            libgles2\        
-            gstreamer1.0-libav 
+      run: sudo apt-get update &&  sudo apt-get install libvpx7 libevent-2.1-7 libopus0 libwoff1 libharfbuzz-icu0 libgstreamer-plugins-base1.0-0 libgstreamer-gl1.0-0  libhyphen0 libmanette-0.2-0 libgles2 gstreamer1.0-libav 
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
