--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,8 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
     - name: Install browsers dependencies
       run: sudo apt-get update &&  sudo apt-get install libvpx7 libevent-2.1-7 libopus0 libwoff1 libharfbuzz-icu0 libgstreamer-plugins-base1.0-0 libgstreamer-gl1.0-0  libhyphen0 libmanette-0.2-0 libgles2 gstreamer1.0-libav 
     - uses: actions/checkout@v3
