--- a/src/components/icon/package.json
+++ b/src/components/icon/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hybridui/button",
-  "version": "0.0.31",
+  "name": "@hybridui/icon",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
