--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "@icon/icofont": "^1.0.1-alpha.1",
+    "@lit-labs/motion": "^1.0.3",
     "@lit-labs/react": "^1.1.1",
+    "@lit/localize": "^0.11.4",
+    "@lit/reactive-element": "^1.6.1",
     "@types/react": "^18.0.28",
     "fa-icons": "^0.2.0",
     "lit": "^2.2.4",
@@ -53,6 +56,7 @@
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "@custom-elements-manifest/analyzer": "^0.6.3",
+    "@lit/localize-tools": "^0.6.7",
     "@open-wc/testing": "^3.1.5",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^5.0.2",
