--- a/src/components/input/package.json
+++ b/src/components/input/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hybridui/button",
-  "version": "0.0.31",
+  "name": "@hybridui/input",
+  "version": "0.0.15",
   "description": "",
   "main": "index.js",
   "scripts": {
