--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "my-element.js",
   "type": "module",
   "scripts": {
+    "start": "concurrently 'npm:build:watch' 'npm:serve'",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rimraf my-element.{d.ts,d.ts.map,js,js.map} test/my-element.{d.ts,d.ts.map,js,js.map} test/my-element_test.{d.ts,d.ts.map,js,js.map}",
@@ -41,6 +42,7 @@
     "@lit/localize": "^0.11.4",
     "@lit/reactive-element": "^1.6.1",
     "@types/react": "^18.0.28",
+    "dayjs": "^1.11.7",
     "fa-icons": "^0.2.0",
     "lit": "^2.2.4",
     "react": "^18.2.0"
@@ -60,6 +62,7 @@
     "@web/test-runner": "^0.15.0",
     "@web/test-runner-playwright": "^0.9.0",
     "@webcomponents/webcomponentsjs": "^2.6.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.15.0",
     "lit-analyzer": "^1.2.1",
     "prettier": "^2.6.2",
