--- a/src/components/datepicker/package.json
+++ b/src/components/datepicker/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@hybridui/datepicker",
-  "version": "0.0.1",
+  "version": "0.0.15",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "dayjs": "^1.11.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
