--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+      - name: Install libgstreamer-plugins-base1.0-0
+        run: sudo apt-get install libgstreamer-plugins-base1.0-0 -y
+
       - run: npm ci
       - run: npm run build
       - run: npm run test
