--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,8 @@ jobs:
           version: 'v0.1.15'
       - name: Install browsers dependencies
         run: sudo apt-get update &&  sudo apt-get install libvpx7 libevent-2.1-7 libopus0 libwoff1 libharfbuzz-icu0 libgstreamer-plugins-base1.0-0 libgstreamer-gl1.0-0  libhyphen0 libmanette-0.2-0 libgles2 gstreamer1.0-libav
-      - name: Install libgstreamer-plugins-base1.0-0
-        run: sudo apt-get install libgstreamer-plugins-base1.0-0 -y
+      - name: Install libgstreamer-plugins-bad1.0-0
+        run: sudo apt-get update && sudo apt-get install libgstreamer-plugins-bad1.0-0 -y
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
