--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,29 +1,54 @@
 name: Publish Package to npmjs
+
 on:
   push:
     branches: ['main']
   pull_request:
     branches: ['main']
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to npm
+      - name: Upload coverage results to Codecov.io
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          version: 'v0.1.15'
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
-      - name: Install libgstreamer-plugins-base1.0-0
-        run: sudo apt-get install libgstreamer-plugins-base1.0-0 -y
+      - name: Install browsers dependencies
+        run: sudo apt-get update &&  sudo apt-get install libvpx7 libevent-2.1-7 libopus0 libwoff1 libharfbuzz-icu0 libgstreamer-plugins-base1.0-0 libgstreamer-gl1.0-0  libhyphen0 libmanette-0.2-0 libgles2 gstreamer1.0-libav
+      - name: Install libgstreamer-plugins-bad1.0-0
+        run: sudo apt-get update && sudo apt-get install libgstreamer-plugins-bad1.0-0 -y
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - name: Install Dependencies
+        run: npm ci
 
-      - run: npm ci
-      - run: npm run build
-      - run: npm run test
-      - run: npm i -g publish-if-not-published
-      - run: cd dist/components/button &&  publish-if-not-published
-      - run: cd dist/components/datepicker &&  publish-if-not-published
-      - run: cd dist/components/icon &&  publish-if-not-published
-      - run: cd dist/components/input &&  publish-if-not-published
+      - name: Build and Test
+        run: |
+          npm run build --if-present
+          npm test
+
+      - name: Publish Components
+        run: |
+          npm i -g publish-if-not-published
+          cd dist/components/button && publish-if-not-published
+          cd ../datepicker && publish-if-not-published
+          cd ../icon && publish-if-not-published
+          cd ../input && publish-if-not-published
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
