--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,5 +50,6 @@ jobs:
           cd ../datepicker && publish-if-not-published
           cd ../icon && publish-if-not-published
           cd ../input && publish-if-not-published
+          cd ../dropdown && publish-if-not-published
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
