--- a/src/components/input/package.json
+++ b/src/components/input/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@hybridui/input",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
