--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:watch": "wtr --watch",
     "test:prod": "MODE=prod wtr",
     "test:prod:watch": "MODE=prod wtr --watch",
-    "roll": "rollup -c ; "
+    "roll": "rollup -c ; ",
+    "link" : "cd dist/components/button && npm link && cd .. && cd colorpicker && npm link && cd .. && cd datepicker && npm link && cd .. && cd dropdown && npm link && cd .. && cd icon && npm link && cd .. && cd input && npm link && cd .. && cd menu && npm link && cd .. && cd modal && npm link && cd .. && cd radio && npm link && cd .. && cd select && npm link && cd .. && cd slider-input && npm link && cd .. && cd tabs && npm link && cd .. && cd tooltips && npm link && cd .. "
   },
   "keywords": [
     "web-components",
