--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:prod": "MODE=prod wtr",
     "test:prod:watch": "MODE=prod wtr --watch",
     "roll": "rollup -c ; ",
-    "link" : "cd dist/components/button && npm link && cd .. && cd colorpicker && npm link && cd .. && cd datepicker && npm link && cd .. && cd dropdown && npm link && cd .. && cd icon && npm link && cd .. && cd input && npm link && cd .. && cd menu && npm link && cd .. && cd modal && npm link && cd .. && cd radio && npm link && cd .. && cd select && npm link && cd .. && cd slider-input && npm link && cd .. && cd tabs && npm link && cd .. && cd tooltips && npm link && cd .. "
+    "link": "cd dist/components/button && npm link && cd .. && cd colorpicker && npm link && cd .. && cd datepicker && npm link && cd .. && cd dropdown && npm link && cd .. && cd icon && npm link && cd .. && cd input && npm link && cd .. && cd menu && npm link && cd .. && cd modal && npm link && cd .. && cd radio && npm link && cd .. && cd select && npm link && cd .. && cd slider-input && npm link && cd .. && cd tabs && npm link && cd .. && cd tooltips && npm link && cd ..  && cd checkbox && npm link && cd .. && cd table && npm link && cd .."
   },
   "keywords": [
     "web-components",
@@ -33,8 +33,11 @@
   "author": "Laabidi Aymen",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@lit-labs/motion": "^1.0.3",
     "@lit-labs/react": "^1.1.1",
+    "@lit-labs/virtualizer": "^2.0.9",
     "@lit/localize": "^0.11.4",
     "@lit/reactive-element": "^1.6.1",
     "@types/react": "^18.0.28",
@@ -49,12 +52,16 @@
     "@custom-elements-manifest/analyzer": "^0.6.3",
     "@lit/localize-tools": "^0.6.7",
     "@open-wc/testing": "^3.1.5",
+    "@rollup/plugin-dynamic-import-vars": "^2.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-url": "^8.0.2",
+    "@rollup/plugin-virtual": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@web/dev-server": "^0.1.31",
     "@web/dev-server-legacy": "^1.0.0",
+    "@web/rollup-plugin-import-meta-assets": "^2.1.0",
     "@web/test-runner": "^0.15.0",
     "@web/test-runner-playwright": "^0.9.0",
     "@webcomponents/webcomponentsjs": "^2.6.0",
@@ -63,7 +70,7 @@
     "lit-analyzer": "^1.2.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.73.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-summary": "^1.4.3",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "~4.7.4"
