Add slider-input component to publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,5 +60,6 @@ jobs:
           cd ../modal && publish-if-not-published
           cd ../checkbox && publish-if-not-published
           cd ../table && publish-if-not-published
+          cd ../slider-input && publish-if-not-published
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
