--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,11 @@ name: Publish Package to npmjs
 
 on:
   push:
-    branches: ['main']
+    branches:
+      - '**'
   pull_request:
-    branches: ['main']
+    branches:
+      - '**'
 
 jobs:
   build:
