--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
           token: ${{secrets.CODECOV_TOKEN}}
           version: 'v0.1.15'
       - name: Install browsers dependencies
-        run: sudo apt-get update &&  sudo apt-get install libvpx7 libevent-2.1-7 libopus0 libwoff1 libharfbuzz-icu0 libgstreamer-plugins-base1.0-0 libgstreamer-gl1.0-0  libhyphen0 libmanette-0.2-0 libgles2 gstreamer1.0-libav
+        run: sudo apt-get update &&  sudo apt-get install  libevent-2.1-7 libopus0 libwoff1 libharfbuzz-icu0 libgstreamer-plugins-base1.0-0 libgstreamer-gl1.0-0  libhyphen0 libmanette-0.2-0 libgles2 gstreamer1.0-libav
       - name: Install libgstreamer-plugins-bad1.0-0
         run: sudo apt-get update && sudo apt-get install libgstreamer-plugins-bad1.0-0 -y
       - uses: actions/checkout@v3
