--- a/src/components/card/package.json
+++ b/src/components/card/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@hybridui/card",
+    "name": "@nuraly/card",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
