--- a/src/components/checkbox/package.json
+++ b/src/components/checkbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hybridui/checkbox",
+  "name": "@nuraly/checkbox",
   "version": "0.0.4",
   "description": "",
   "main": "index.js",
