--- a/src/components/colorpicker/package.json
+++ b/src/components/colorpicker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hybridui/color-picker",
+  "name": "@nuraly/color-picker",
   "version": "0.0.6",
   "description": "",
   "main": "index.js",
