--- a/src/components/datepicker/package.json
+++ b/src/components/datepicker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hybridui/datepicker",
+  "name": "@nuraly/datepicker",
   "version": "0.0.26",
   "description": "",
   "main": "index.js",
