--- a/src/components/image/package.json
+++ b/src/components/image/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@hybridui/image",
+    "name": "@nuraly/image",
     "version": "0.0.2",
     "description": "",
     "main": "index.js",
