--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuraly/workspace",
+  "name": "@nuralyui/workspace",
   "private": true,
   "version": "1.0.5",
   "description": "A entreprise web component",
