--- a/src/components/dropdown/package.json
+++ b/src/components/dropdown/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuraly/dropdown",
+  "name": "@nuralyui/dropdown",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
