--- a/src/components/slider-input/package.json
+++ b/src/components/slider-input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuraly/slider-input",
+  "name": "@nuralyui/slider-input",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
