--- a/src/components/tooltips/package.json
+++ b/src/components/tooltips/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuraly/tooltips",
+  "name": "@nuralyui/tooltips",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
