--- a/src/components/carousel/package.json
+++ b/src/components/carousel/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@nuraly/carousel",
+    "name": "@nuralyui/carousel",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
