--- a/src/components/checkbox/package.json
+++ b/src/components/checkbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuraly/checkbox",
+  "name": "@nuralyui/checkbox",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
