--- a/src/components/collapse/package.json
+++ b/src/components/collapse/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@nuraly/collapse",
+    "name": "@nuralyui/collapse",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
