--- a/src/components/datepicker/package.json
+++ b/src/components/datepicker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuraly/datepicker",
+  "name": "@nuralyui/datepicker",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
