--- a/src/components/text-label/package.json
+++ b/src/components/text-label/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@nuraly/text-label",
+    "name": "@nuralyui/text-label",
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
