--- a/src/components/tabs/package.json
+++ b/src/components/tabs/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "dayjs": "^1.11.7"
   },
+  "peerDependencies": {
+    "@nuralyui/label": "^0.0.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
