feat(collapse): update hy-collapse component structure and styles, bump version to 0.0.3

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:prod": "MODE=prod wtr",
     "test:prod:watch": "MODE=prod wtr --watch",
     "roll": "rollup -c ; ",
-    "link": "cd dist/components/button && npm link && cd .. && cd colorpicker && npm link && cd .. && cd datepicker && npm link && cd .. && cd dropdown && npm link && cd .. && cd icon && npm link && cd .. && cd input && npm link && cd .. && cd menu && npm link && cd .. && cd modal && npm link && cd .. && cd radio && npm link && cd .. && cd select && npm link && cd .. && cd slider-input && npm link && cd .. && cd tabs && npm link && cd .. && cd tooltips && npm link && cd ..  && cd checkbox && npm link && cd .. && cd table && npm link && cd .."
+    "link": "cd dist/components/button && npm link && cd .. && cd colorpicker && npm link && cd .. && cd datepicker && npm link && cd .. && cd dropdown && npm link && cd .. && cd icon && npm link && cd .. && cd input && npm link && cd .. && cd menu && npm link && cd .. && cd modal && npm link && cd .. && cd radio && npm link && cd .. && cd select && npm link && cd .. && cd slider-input && npm link && cd .. && cd tabs && npm link && cd .. && cd tooltips && npm link && cd ..  && cd checkbox && npm link && cd .. && cd table && npm link && cd .. && cd collapse && npm link && cd .."
   },
   "keywords": [
     "web-components",
