feat(publish): add canvas component to publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,5 +67,6 @@ jobs:
           cd ../collapse && publish-if-not-published -- --access=public
           cd ../label && publish-if-not-published -- --access=public
           cd ../divider && publish-if-not-published -- --access=public
+          cd ../canvas && publish-if-not-published -- --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
