feat(chatbot): add constants and interfaces; implement message interface, sender enum, and localization service updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,8 @@
     ]
   },
   "include": ["src/**/*.ts","src/**/*.json"],
-  "exclude": []
+  "exclude": [],
+  "paths": {
+    "@nuralyui/input/*": ["src/components/input/*"],
+  }
 }
