--- a/src/components/chatbot/package.json
+++ b/src/components/chatbot/package.json
@@ -8,5 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Labidi Aymen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dayjs": "^1.11.13"
+  }
 }
