--- a/src/components/label/package.json
+++ b/src/components/label/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.9",
     "description": "",
     "main": "index.js",
-    "type": "module",<
+    "type": "module",
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
