--- a/src/components/datepicker/package.json
+++ b/src/components/datepicker/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@nuralyui/datepicker",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "dependencies": {
-    "dayjs": "^1.11.7"
+  "peerDependencies": {
+    "dayjs": "^2.0.0-alpha.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
