--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -69,5 +69,6 @@ jobs:
           cd ../divider && publish-if-not-published -- --access=public
           cd ../canvas && publish-if-not-published -- --access=public
           cd ../chatbot && publish-if-not-published -- --access=public
+          cd ../file-upload && publish-if-not-published -- --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
