feat: Add document component styles and structure
- Created document.style.ts for styling the document component.
- Added index.ts to export the document component.
- Initialized package.json for the document component with basic metadata.

feat: Enhance file upload component functionality

- Added custom events for file changes and drops in file-upload.component.ts.
- Improved file handling logic to support single and multiple file uploads.
- Updated styles for better layout and responsiveness in styles.ts.

feat: Implement image component with preview functionality

- Developed hy-image component with error handling and fallback image.
- Added preview modal for displaying images in full screen.
- Styled image component for better user experience.

feat: Introduce video component with fullscreen support

- Created hy-video-player component with error handling and fallback.
- Implemented fullscreen functionality for video playback.
- Added demo component for showcasing video player usage.
- Initialized package.json for the video component with basic metadata.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,8 +45,8 @@ jobs:
         run: |
           npm install -g publish-if-not-published
           for dir in \
-            button datepicker icon input dropdown image tabs menu \
-            radio select tooltips colorpicker modal checkbox table \
+            button datepicker icon input dropdown image tabs document menu \
+            radio select tooltips colorpicker modal checkbox video table \
             slider-input collapse label divider canvas chatbot file-upload; do
             cd dist/components/$dir
             publish-if-not-published -- --access=public
