fix(package): correct package name and version for document component

--- a/src/components/document/package.json
+++ b/src/components/document/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nuralyui/file-upload",
-  "version": "0.0.5",
+  "name": "@nuralyui/document",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
