feat: Enhance documentation and add new components
- Updated the development README.md to provide a comprehensive guide for using the Nuraly UI library, including available demos and development workflow.
- Created a new documentation structure in docs/README.md, outlining installation, components, design system, customization, development, advanced topics, and API reference.
- Added an installation guide in docs/getting-started/installation.md detailing how to install Nuraly UI components.
- Updated package.json with repository and bug report links, and improved the description.
- Introduced detailed README.md files for the button and input components, covering features, usage, API reference, examples, styling, accessibility, and TypeScript support.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "@nuralyui/workspace",
   "private": true,
   "version": "1.0.5",
-  "description": "A entreprise web component",
+  "description": "A comprehensive collection of enterprise-class web components built with Lit and TypeScript",
   "type": "module",
+  "homepage": "https://github.com/NuralyUI/NuralyUI",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NuralyUI/NuralyUI.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NuralyUI/NuralyUI/issues"
+  },
   "scripts": {
     "start": "concurrently 'npm:build:watch' 'npm:serve'",
     "build": "tsc",
@@ -28,7 +36,17 @@
     "web-components",
     "lit-element",
     "typescript",
-    "lit"
+    "lit",
+    "ui-library",
+    "design-system",
+    "components",
+    "enterprise",
+    "accessibility",
+    "responsive",
+    "react",
+    "vue",
+    "angular",
+    "framework-agnostic"
   ],
   "author": "Laabidi Aymen",
   "license": "BSD-3-Clause",
