--- a/src/components/colorpicker/package.json
+++ b/src/components/colorpicker/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nuralyui/color-picker",
-  "version": "0.0.2",
+  "name": "@nuralyui/colorpicker",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "type": "module",
