--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,13 +41,18 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           version: 'v0.1.15'
 
+      - name: Configure npm authentication
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+
       - name: Publish Components
         run: |
           npm install -g publish-if-not-published
           for dir in \
             button datepicker icon input dropdown image tabs document menu \
             radio select tooltips colorpicker modal checkbox video table \
-            slider-input collapse label divider canvas chatbot file-upload; do
+            slider-input collapse label divider canvas chatbot file-upload \
+            card carousel console toast; do
             cd dist/components/$dir
             publish-if-not-published -- --access=public
             cd - >/dev/null
