refactor: replace @hybridui components with @nuralyui components in package.json and update dependencies
- Updated package.json to replace all @hybridui dependencies with @nuralyui equivalents.
- Updated package-lock.json to reflect the new dependencies and their versions.
- Modified sidebars.js to include new component categories and items for @nuralyui components.

--- a/website-docs/package.json
+++ b/website-docs/package.json
@@ -12,19 +12,40 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "update": "ncu \"/^@hybridui.*$/\" -u"
+    "update": "ncu --color --cacheClear \"/^@nuralyui.*$/\" -u"
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
-    "@hybridui/button": "^0.0.34",
-    "@hybridui/datepicker": "^0.0.17",
-    "@hybridui/dropdown": "^0.0.16",
-    "@hybridui/icon": "^0.0.2",
-    "@hybridui/input": "^0.0.21",
-    "@hybridui/tabs": "^0.0.8",
     "@lit-labs/react": "^1.1.1",
     "@mdx-js/react": "^1.6.22",
+    "@nuralyui/button": "^0.0.9",
+    "@nuralyui/canvas": "^0.0.3",
+    "@nuralyui/card": "^0.0.4",
+    "@nuralyui/carousel": "^0.0.3",
+    "@nuralyui/chatbot": "^0.0.4",
+    "@nuralyui/checkbox": "^0.0.3",
+    "@nuralyui/collapse": "^0.0.6",
+    "@nuralyui/colorpicker": "^0.0.3",
+    "@nuralyui/datepicker": "^0.0.3",
+    "@nuralyui/divider": "^0.0.2",
+    "@nuralyui/document": "^0.0.3",
+    "@nuralyui/dropdown": "^0.0.9",
+    "@nuralyui/file-upload": "^0.0.7",
+    "@nuralyui/icon": "^0.0.5",
+    "@nuralyui/image": "^0.0.5",
+    "@nuralyui/input": "^0.0.3",
+    "@nuralyui/label": "^0.0.12",
+    "@nuralyui/menu": "^0.0.9",
+    "@nuralyui/modal": "^0.0.2",
+    "@nuralyui/radio": "^0.0.3",
+    "@nuralyui/select": "^0.0.4",
+    "@nuralyui/slider-input": "^0.0.2",
+    "@nuralyui/table": "^0.0.2",
+    "@nuralyui/tabs": "^0.0.12",
+    "@nuralyui/toast": "^0.0.2",
+    "@nuralyui/tooltips": "^0.0.2",
+    "@nuralyui/video": "^0.0.2",
     "clsx": "^1.2.1",
     "lit": "^2.6.1",
     "prism-react-renderer": "^1.3.5",
