--- a/website-docs/package.json
+++ b/website-docs/package.json
@@ -12,40 +12,42 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "update": "ncu --color --cacheClear \"/^@nuralyui.*$/\" -u"
+    "update": "ncu --color --cacheClear \"/^@nuralyui.*$/\" -u",
+    "link:components": "npm run build:parent && npm install",
+    "build:parent": "cd .. && npm run build"
   },
   "dependencies": {
     "@docusaurus/core": "^3.8.1",
     "@docusaurus/preset-classic": "^3.8.1",
     "@lit-labs/react": "^1.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@nuralyui/button": "^0.0.9",
-    "@nuralyui/canvas": "^0.0.3",
-    "@nuralyui/card": "^0.0.4",
-    "@nuralyui/carousel": "^0.0.3",
-    "@nuralyui/chatbot": "^0.0.4",
-    "@nuralyui/checkbox": "^0.0.3",
-    "@nuralyui/collapse": "^0.0.6",
-    "@nuralyui/colorpicker": "^0.0.3",
-    "@nuralyui/datepicker": "^0.0.3",
-    "@nuralyui/divider": "^0.0.2",
-    "@nuralyui/document": "^0.0.3",
-    "@nuralyui/dropdown": "^0.0.9",
-    "@nuralyui/file-upload": "^0.0.7",
-    "@nuralyui/icon": "^0.0.5",
-    "@nuralyui/image": "^0.0.5",
-    "@nuralyui/input": "^0.0.3",
-    "@nuralyui/label": "^0.0.12",
-    "@nuralyui/menu": "^0.0.9",
-    "@nuralyui/modal": "^0.0.2",
-    "@nuralyui/radio": "^0.0.3",
-    "@nuralyui/select": "^0.0.4",
-    "@nuralyui/slider-input": "^0.0.2",
-    "@nuralyui/table": "^0.0.2",
-    "@nuralyui/tabs": "^0.0.12",
-    "@nuralyui/toast": "^0.0.2",
-    "@nuralyui/tooltips": "^0.0.2",
-    "@nuralyui/video": "^0.0.2",
+    "@nuralyui/button": "file:../dist/components/button",
+    "@nuralyui/canvas": "file:../dist/components/canvas",
+    "@nuralyui/card": "file:../dist/components/card",
+    "@nuralyui/carousel": "file:../dist/components/carousel",
+    "@nuralyui/chatbot": "file:../dist/components/chatbot",
+    "@nuralyui/checkbox": "file:../dist/components/checkbox",
+    "@nuralyui/collapse": "file:../dist/components/collapse",
+    "@nuralyui/colorpicker": "file:../dist/components/colorpicker",
+    "@nuralyui/datepicker": "file:../dist/components/datepicker",
+    "@nuralyui/divider": "file:../dist/components/divider",
+    "@nuralyui/document": "file:../dist/components/document",
+    "@nuralyui/dropdown": "file:../dist/components/dropdown",
+    "@nuralyui/file-upload": "file:../dist/components/file-upload",
+    "@nuralyui/icon": "file:../dist/components/icon",
+    "@nuralyui/image": "file:../dist/components/image",
+    "@nuralyui/input": "file:../dist/components/input",
+    "@nuralyui/label": "file:../dist/components/label",
+    "@nuralyui/menu": "file:../dist/components/menu",
+    "@nuralyui/modal": "file:../dist/components/modal",
+    "@nuralyui/radio": "file:../dist/components/radio",
+    "@nuralyui/select": "file:../dist/components/select",
+    "@nuralyui/slider-input": "file:../dist/components/slider-input",
+    "@nuralyui/table": "file:../dist/components/table",
+    "@nuralyui/tabs": "file:../dist/components/tabs",
+    "@nuralyui/toast": "file:../dist/components/toast",
+    "@nuralyui/tooltips": "file:../dist/components/tooltips",
+    "@nuralyui/video": "file:../dist/components/video",
     "clsx": "^1.2.1",
     "lit": "^2.6.1",
     "prism-react-renderer": "^1.3.5",
