--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nuralyui/workspace",
   "private": true,
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A comprehensive collection of enterprise-class web components built with Lit and TypeScript",
   "type": "module",
   "homepage": "https://github.com/NuralyUI/NuralyUI",
@@ -31,7 +31,8 @@
     "test:prod:watch": "MODE=prod wtr --watch",
     "roll": "rollup -c ; ",
     "link": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm link', { stdio: 'inherit' }));\"",
-    "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\""  },
+    "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\""
+  },
   "keywords": [
     "web-components",
     "lit-element",
