feat: add Storybook demo for NuralyUI components
- Created package.json for Storybook demo setup with necessary scripts and dependencies.
- Added button stories with various states and configurations.
- Introduced card stories showcasing different card variations and features.
- Implemented checkbox stories demonstrating different states and a checkbox group.
- Developed input stories covering various input types and states.
- Created an introduction story to welcome users and highlight key features of NuralyUI.
- Added installation guide story for easy setup and usage instructions.
- Configured TypeScript settings with tsconfig.json for better development experience.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "test:prod:watch": "MODE=prod wtr --watch",
     "roll": "rollup -c ; ",
     "link": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm link', { stdio: 'inherit' }));\"",
-    "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\""
+    "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\"",
+    "storybook": "cd storybook-demo && npm run dev",
+    "storybook:build": "npm run build && cd storybook-demo && npm run build-storybook"
   },
   "keywords": [
     "web-components",
