--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build Project
         run: npm run build --if-present
 
+      - name: Build Component Bundles
+        run: npm run roll
+
       - name: Upload coverage results to Codecov.io
         uses: codecov/codecov-action@v2
         with:
