--- a/src/components/button/package.json
+++ b/src/components/button/package.json
@@ -4,9 +4,35 @@
   "description": "Button component for NuralyUI library",
   "main": "index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./index.js"
+    },
+    "./bundle": {
+      "import": "./button.bundled.js"
+    }
+  },
+  "files": [
+    "*.js",
+    "*.d.ts",
+    "*.js.map",
+    "button.bundled.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NuralyUI/NuralyUI.git",
+    "directory": "src/components/button"
+  },
+  "keywords": [
+    "web-components",
+    "lit-element",
+    "button",
+    "ui-components",
+    "typescript"
+  ],
   "author": "Labidi Aymen",
   "license": "ISC",
   "nuralyui": {
