--- a/src/components/dropdown/package.json
+++ b/src/components/dropdown/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "@nuralyui/dropdown",
-  "version": "0.0.10",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "dependencies": {
-    "dayjs": "^1.11.7"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Labidi Aymen",
-  "license": "ISC"
+    "name": "@nuralyui/dropdown",
+    "version": "0.0.10",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "dependencies": {
+        "dayjs": "^1.11.7"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Labidi Aymen",
+    "license": "ISC",
+    "exports": {
+        ".": {
+            "import": "./index.js"
+        },
+        "./bundle": {
+            "import": "./bundle.js"
+        }
+    },
+    "files": [
+        "bundle.js",
+        "*.js",
+        "*.d.ts",
+        "*.js.map"
+    ]
 }
