feat: add comprehensive stories for hy-select component in Storybook
- Introduced a new Storybook file for the hy-select component, showcasing various features and functionalities.
- Implemented stories for single and multiple selection modes, including searchable options and rich options with icons and descriptions.
- Added examples for validation states, disabled states, and empty states.
- Included interactive examples demonstrating event handling and dynamic loading of options.
- Created a playground for users to test all features and configurations of the select component.

--- a/src/components/select/package.json
+++ b/src/components/select/package.json
@@ -1,9 +1,21 @@
 {
     "name": "@nuralyui/select",
-    "version": "0.0.5",
-    "description": "",
+    "version": "0.1.0",
+    "description": "A comprehensive select component with advanced features including multi-selection, keyboard navigation, validation, and accessibility support.",
     "main": "index.js",
     "type": "module",
+    "keywords": [
+        "select",
+        "dropdown",
+        "combobox",
+        "multi-select",
+        "web-components",
+        "lit-element",
+        "typescript",
+        "accessibility",
+        "validation",
+        "keyboard-navigation"
+    ],
     "dependencies": {
         "dayjs": "^1.11.7"
     },
